--- a/bower.json
+++ b/bower.json
@@ -1,23 +1,23 @@
 {
-  "name": "ucsc-mobile-portal",
-  "version": "0.3",
-  "devDependencies": {
-    "angular": "~1.3.6",
-    "angular-mocks": "~1.3.6",
-    "angular-touch": "~1.3.6",
-    "angular-ui-router": "0.2.13",
-    "angular-animate": "~1.3.6",
-    "es5-shim": "~2.3.0",
-    "bourbon": "~4.0.2",
-    "breakpoint-sass": "~2.5.0",
-    "susy": "~2.1.3",
-    "normalize-scss": "~3.0.1",
-    "angular-ui-sref-fastclick": "0.0.1"
-  },
-  "dependencies": {
-    "angular-ui-router-anim-in-out": "~0.0.13"
-  },
-  "resolutions": {
-    "angular": "1.3.3-build.3575+sha.4f4ff5f"
-  }
+    "name": "ucsc-mobile-portal",
+    "version": "0.3.1",
+    "devDependencies": {
+        "angular": "~1.3.6",
+        "angular-mocks": "~1.3.6",
+        "angular-touch": "~1.3.6",
+        "angular-ui-router": "0.2.13",
+        "angular-animate": "~1.3.6",
+        "es5-shim": "~2.3.0",
+        "bourbon": "~4.0.2",
+        "breakpoint-sass": "~2.5.0",
+        "susy": "~2.1.3",
+        "normalize-scss": "~3.0.1",
+        "angular-ui-sref-fastclick": "0.0.1"
+    },
+    "dependencies": {
+        "angular-ui-router-anim-in-out": "~0.0.13",
+    },
+    "resolutions": {
+        "angular": "1.3.3-build.3575+sha.4f4ff5f"
+    }
 }
